# JsonRD4Analysis

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
MakefileInstall/: CompileShared.sh  CompileStatic.sh  JsonRDsetup.sh  Makefile
cmake/: JsonRD4AnalysisConfig.cmake.in  JsonRDsetup.sh.in
include/: ConfigInterface.hpp  JsonConfigReader.hpp  JsonConfigReaderBase.hpp
src/: JsonConfigReader.cpp
test/: input.json
test/ex1_using_find_package/: CMakeLists.txt  test_json.cpp
test/ex2_using_lib_madeby_Makefile/: CMakeLists.txt  config.json
